// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getUserSkills returns the userSkills 1`] = `
Array [
  "snap",
  "crackle",
  "pop",
]
`;

exports[`reducer on ADD_SKILL_PENDING adds a skill 1`] = `
Object {
  "skill": "",
  "userSkills": Array [
    "oneing",
    "twoing",
    "threeing",
  ],
}
`;

exports[`reducer on REMOVE_SKILL_PENDING removes a skill 1`] = `
Object {
  "userSkills": Array [
    "oneing",
    "threeing",
  ],
}
`;
